feat(course): complete kafka projection and internal contracts